[package]
name = "goto-rs"
version = "0.2.0"
authors = ["Sylvester Chin <sylvester.csw@gmail.com>"]
edition = "2018"
description = "*gt* is a simple and user-friendly way to jump to your indexed directories."
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/slai11/goto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap ="2.31.2"
csv = "1.1"
itertools = "0.9"
termcolor = "1.1"

