[package]
name = "goto-rs"
version = "0.3.0"
authors = ["Sylvester Chin <sylvester.csw@gmail.com>"]
edition = "2018"
description = "*gt* is a simple and user-friendly way to jump to your indexed directories."
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/slai11/goto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "4.1.4"
csv = "1.1"
itertools = "0.10.5"
termcolor = "1.1"
dirs = "4.0"
