[package]
name = "goto-rs"
version = "0.4.0"
authors = ["Sylvester Chin <sylvester.csw@gmail.com>"]
edition = "2021"
rust-version = "1.78"
description = "*gt* is a simple and user-friendly way to jump to your indexed directories."
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/slai11/goto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
csv = "1.3.0"
itertools = "0.10.5"
termcolor = "1.4.1"
dirs = "4.0.0"
inquire = "0.7.5"
